<resources>
    <string name="app_name">REvent</string>
    //Labels
    <string name="activityKE">Kommende Events</string>
    <string name="activityVE">Vorgemerkte Events</string>
    <string name="activityE">Event</string>
    <string name="activitySettings">Settings</string>

    <string name="title_activity_maps">Karte</string>

    <string name="activityVorgeschlageneEvents">VorgeschlageneEvents</string>

    //Event
    <string name="date">Datum:</string>
    <string name="time">Uhrzeit:</string>
    <string name="location">Ort:</string>
    <string name="fachschaft">Fachschaft:</string>
    <string name="eventType">Eventtyp:</string>
    <string name="notes">Anmerkungen:</string>
    <string name="switch_teilnehmen">Teilnehmen</string>
    <string name="switch_textOff">AUS</string>
    <string name="switch_textOn">EIN</string>
    //Settings
    <string name="settings_organizer">Organisatoren</string>
    <string name="settings_eventTypes">Eventtypen</string>
    <string name="settings_ausflug">Ausflug</string>
    <string name="settings_vortrag">Vortrag</string>
    <string name="settings_party">Party</string>
        //Fachschaften
    <string name="settingsFA_bio">Fachschaft Biologie</string>
    <string name="settingsFA_chem">Fachschaft Chemie</string>
    <string name="settingsFA_ges">Fachschaft Geschichte</string>
    <string name="settingsFA_hum">Fachschaft Humanmedizin</string>
    <string name="settingsFA_jura">Fachschaft Jura</string>
    <string name="settingsFA_Kath">Fachschaft Katholische Theologie</string>
    <string name="settingsFA_Lehr">Fachschaft Lehramt</string>
    <string name="settingsFA_Math">Fachschaft Mathe/Physik</string>
    <string name="settingsFA_Phy">Fachschaft Physik</string>
    <string name="settingsFA_Phar">Fachschaft Pharmazie</string>
    <string name="settingsFA_Phil">Fachschaft Philosophie</string>
    <string name="settingsFA_Poli">Fachschaft Politikwissenschaften</string>
    <string name="settingsFA_Päd">Fachschaft Pädagogik</string>
    <string name="settingsFA_Psy">Fachschaft Psychologie</string>
    <string name="settingsFA_Rom">Fachschaft Romanistik</string>
    <string name="settingsFA_Slav">Fachschaft Slavistik</string>
    <string name="settingsFA_Spo">Fachschaft Sport</string>
    <string name="settingsFA_SLK">Fachschaft SLK</string>
    <string name="settingsFA_Süd">Fachschaft SüdOst</string>
    <string name="settingsFA_Wirt">Fachschaft Wirtschaft</string>
    <string name="settingsFA_Zahn">Fachschaft Zahnmedizin</string>


    //Karte
    <string name="connection_failure">REvent benötigt eine aktive Internetverbindung um richtig zu funktionieren!</string>
    <string name="connection_success">aktive Internetverbindung gefunden!</string>
    <string name="error_occured">Leider ist ein Fehler aufgetreten.</string>
    <string name="own_location">Deine Position</string>
    <string name="meter">m</string>
    <string name="gps_deactivated">GPS muss aktiviert sein um den eigenen Standort einsehen zu können.</string>

    <string name="permission_granted">Berechtigung erhalten.</string>
    <string name="permission_denied">Berechtigung nicht erhalten.</string>
    <string name="map_loading">Karte wird geladen.</string>
</resources>
