<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_eventTypes"
        android:key="pref_type">
        <CheckBoxPreference
            android:key="pref_ausflug"
            android:title="@string/settings_ausflug"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_vortrag"
            android:title="@string/settings_vortrag"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_party"
            android:title="@string/settings_party"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_organizer"
        android:key="pref_organizer">
        <CheckBoxPreference
            android:key="pref_FA_bio"
            android:title="@string/settingsFA_bio"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_chem"
            android:title="@string/settingsFA_chem"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_ges"
            android:title="@string/settingsFA_ges"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_hum"
            android:title="@string/settingsFA_hum"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_jura"
            android:title="@string/settingsFA_jura"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_kath"
            android:title="@string/settingsFA_Kath"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_lehr"
            android:title="@string/settingsFA_Lehr"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_math"
            android:title="@string/settingsFA_Math"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_phy"
            android:title="@string/settingsFA_Phy"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_phar"
            android:title="@string/settingsFA_Phar"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_phil"
            android:title="@string/settingsFA_Phil"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_poli"
            android:title="@string/settingsFA_Poli"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_psy"
            android:title="@string/settingsFA_Psy"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_päd"
            android:title="@string/settingsFA_Päd"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_rom"
            android:title="@string/settingsFA_Rom"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_slav"
            android:title="@string/settingsFA_Slav"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_spo"
            android:title="@string/settingsFA_Spo"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_slk"
            android:title="@string/settingsFA_SLK"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_süd"
            android:title="@string/settingsFA_Süd"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_wirt"
            android:title="@string/settingsFA_Wirt"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_FA_zahn"
            android:title="@string/settingsFA_Zahn"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>